RESOLVED FIXED279244
Fix unused capture warning in ConnectionUnix.cpp
https://bugs.webkit.org/show_bug.cgi?id=279244
Summary Fix unused capture warning in ConnectionUnix.cpp
Kohei Asano
Reported 2024-09-05 20:01:19 PDT
Attachments
Kohei Asano
Comment 1 2024-09-05 20:19:40 PDT
EWS
Comment 2 2024-09-06 08:21:41 PDT
Committed 283270@main (4327cf1e68ee): <https://commits.webkit.org/283270@main> Reviewed commits have been landed. Closing PR #33226 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.