Fix unused capture warning in ConnectionUnix.cpp https://bugs.webkit.org/show_bug.cgi?id=279244

Reviewed by Ross Kirsling and Michael Catanzaro.

Don't capture any variable on non-unix, glib build

* Source/WebKit/Platform/IPC/unix/ConnectionUnix.cpp:

Canonical link: https://commits.webkit.org/283270@main